--- a/html/page002.html
+++ b/html/page002.html
@@ -140,17 +140,80 @@
             <header>
                 <h2 class="title">Pseudoclasses</h2>
             </header>
-            <article class="zebra">
-                <p><a href="page101.html">:active</a></p>
-                <p>:first-child</p>
-                <p>:focus</p>
-                <p>:hover</p>
-                <p>:last-child</p>
-                <p>:link</p>
-                <p>:not</p>
-                <p>:nth-child</p>
-                <p>:visited</p>
-            </article>
+            <table class="zebra">
+                <tr>
+                    <td class="left">
+                        :active
+                    </td>
+                    <td class="right">
+                        when click on it
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        :first child
+                    </td>
+                    <td class="right">
+                        the first of
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        :focus
+                    </td>
+                    <td class="right">
+                        has focus
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        :hover
+                    </td>
+                    <td class="right">
+                        mouse over it
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        :last-child
+                    </td>
+                    <td class="right">
+                        is the last child
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        :link
+                    </td>
+                    <td class="right">
+                        unvisited links
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        :not()
+                    </td>
+                    <td class="right">
+                        is not an element
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        :nth-child
+                    </td>
+                    <td class="right">
+                        even, odd, 2n, 3n+0
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        :visited
+                    </td>
+                    <td class="right">
+                        visited links
+                    </td>
+                </tr>
+            </table>
         </section>
     
         <section id="pseudoelements">
