--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <link rel="icon" href="pictures/l+ogo31.JPG" type="image/png">
+    <link rel="icon" href="pictures/logo31.JPG" type="image/png">
     <link rel="stylesheet" href="css/style000.css">
 </head>
 <body>
