--- a/html/page002.html
+++ b/html/page002.html
@@ -342,14 +342,14 @@
                 </ul>
                 <br>
                 <ul>
-                    <li><p>xxx-large - 3em = 48px</p></li>
-                    <li><p>xx-large - 2em = 32px</p></li>
-                    <li><p>x-large - 1.5em = 24px</p></li>
-                    <li><p>large - 1.1em = 18px</p></li>
-                    <li><p>medium - 1em = 16px</p></li>
-                    <li><p>small - 0.8em = 13px</p></li>
-                    <li><p>x-small - 0.63em = 10px</p></li>
-                    <li><p>xx-small - 0.56em = 9px</p></li>
+                    <li class="xxx-large"><p>xxx-large - 3em = 48px</p></li>
+                    <li class="xx-large"><p>xx-large - 2em = 32px</p></li>
+                    <li class="x-large"><p>x-large - 1.5em = 24px</p></li>
+                    <li class="large"><p>large - 1.1em = 18px</p></li>
+                    <li class="medium"><p>medium - 1em = 16px</p></li>
+                    <li class="small"><p>small - 0.8em = 13px</p></li>
+                    <li class="x-small"><p>x-small - 0.63em = 10px</p></li>
+                    <li class="xx-small"><p>xx-small - 0.56em = 9px</p></li>
                 </ul>
             </article>
         </section>
