--- a/html/page001.html
+++ b/html/page001.html
@@ -329,7 +329,7 @@
                         B
                     </td>
                     <td class="right">
-                        standalone
+                        whole
                     </td>
                 </tr>
                 <tr>
