--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <section>
                         <a href="html/page003.html">JS</a>
                     </section>
+                    <section>
+                        <a href="html/page004.html">VSC</a>
+                    </section>
                 </nav>
             </header>
         </div>
