--- a/html/page004.html
+++ b/html/page004.html
@@ -49,6 +49,21 @@
                 </tr>
                 <tr>
                     <td class="left">
+                        Ctrl+B                        
+                    </td>
+                    <td class="right">
+                        o/c Explorer window
+                    </td>
+                </tr>
+            </table>
+        </section>
+        <section id="emmet">
+            <header>
+                <h2 class="title">Emmet</h2>
+            </header>
+            <table class="zebra">
+                <tr>
+                    <td class="left">
                         lorem2
                     </td>
                     <td class="right">
@@ -57,13 +72,12 @@
                 </tr>
                 <tr>
                     <td class="left">
-                        Ctrl+B                        
+                        p.a                  
                     </td>
                     <td class="right">
-                        o/c Explorer window
+                        &lt;p class="a"&gt;&lt;/p&gt;
                     </td>
                 </tr>
-
             </table>
         </section>
         <section id="html-words-of-wisdom">
