--- a/html/page001.html
+++ b/html/page001.html
@@ -12,7 +12,7 @@
     <main>  
         <section id="html-tags">
             <header>
-                <h2 class="title">Znaczniki HTML</h2>
+                <h2 class="title">HTML tags</h2>
             </header>
             <article>
                 <p class="block semantic">aside</p>
