--- a/html/page001.html
+++ b/html/page001.html
@@ -421,9 +421,9 @@
             </table>
         </section>
 
-        <section id="html-words-of-wisdom">
+        <section id="html-golden-thoughts">
             <header>
-                <h2 class="title">Złote myśli</h2>
+                <h2 class="title">Golden thoughts</h2>
             </header>
             <article>
                 <p>Wyszukiwarki indeksują strony na podstawie nagłówków.<p>
