--- a/html/page004.html
+++ b/html/page004.html
@@ -82,7 +82,7 @@
         </section>
         <section id="html-words-of-wisdom">
             <header>
-                <h2 class="title">Golden thoughs</h2>
+                <h2 class="title">Golden thoughts</h2>
             </header>
             <article>
                 <p>...<p>
