--- a/html/page004.html
+++ b/html/page004.html
@@ -78,6 +78,14 @@
                         &lt;p class="a"&gt;&lt;/p&gt;
                     </td>
                 </tr>
+                <tr>
+                    <td class="left">
+                        p{abc}                  
+                    </td>
+                    <td class="right">
+                        &lt;p&gt;abc&lt;/p&gt;
+                    </td>
+                </tr>
             </table>
         </section>
         <section id="html-words-of-wisdom">
