--- a/html/page004.html
+++ b/html/page004.html
@@ -86,6 +86,22 @@
                         &lt;p&gt;abc&lt;/p&gt;
                     </td>
                 </tr>
+                <tr>
+                    <td class="left">
+                        ol>li*3
+                    </td>
+                    <td class="right">
+                        make an ordered list of 3 
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        table>tr*2>td*3               
+                    </td>
+                    <td class="right">
+                        make a table 2 x 3
+                    </td>
+                </tr>
             </table>
         </section>
         <section id="html-words-of-wisdom">
