--- a/html/page001.html
+++ b/html/page001.html
@@ -286,6 +286,14 @@
                 </tr>
                 <tr>
                     <td class="left">
+                        &lt;aside&gt;
+                    </td>
+                    <td class="right">
+                        
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
                         &lt;footer&gt;
                     </td>
                     <td class="right">
