--- a/html/page001.html
+++ b/html/page001.html
@@ -127,7 +127,7 @@
                     </td>
                 <tr>
                     <td class="left">
-                        &lt;<a href="../pictures/WD008.png">meta</a>&gt;
+                        <a href="../pictures/WD008.png">&lt;meta&gt;</a>
                     </td>
                     <td class="right">
                         
