--- a/html/page001.html
+++ b/html/page001.html
@@ -429,6 +429,38 @@
             </table>
         </section>
 
+        <section id="html-tags-picture">
+            <header>
+                <h2 class="title">HTML picture tags</h2>
+            </header>
+            <table class="zebra">
+                <tr>
+                    <td class="left">
+                        &lt;figure&gt;
+                    </td>
+                    <td class="right">
+                        picture wrapper
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        &lt;figcaption&gt;
+                    </td>
+                    <td class="right">
+                        picture description
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        &lt;img&gt;
+                    </td>
+                    <td class="right">
+                        picture
+                    </td>
+                </tr>
+            </table>
+        </section>
+
         <section id="html-golden-thoughts">
             <header>
                 <h2 class="title">Golden thoughts</h2>
