--- a/html/page001.html
+++ b/html/page001.html
@@ -27,9 +27,9 @@
             </article>
         </section>
 
-        <section id="html-tags-semantic">
+        <section id="html-boilerplate-tags">
             <header>
-                <h2 class="title">HTML boiler plate</h2>
+                <h2 class="title">HTML boilerplate</h2>
             </header>
             <table class="zebra">
                 <tr>
@@ -89,9 +89,13 @@
                     </td>
                 </tr>
             </table>
+            <footer>
+                <a href="../pictures/wd008-code.png">Code</a>
+                <a href="../pictures/wd008-view.png">View</a>
+            </footer>
         </section>
 
-        <section id="html-tags-basic">
+        <section id="html-basic-tags">
             <header>
                 <h2 class="title">HTML basic tags</h2>
             </header>
@@ -171,21 +175,6 @@
                     </td>
                     <td class="right">
                         input of data
-                    </td>
-                </tr>
-                <tr>
-                    <td class="left">
-                        &lt;link&gt;
-                    </td>
-                    <td class="right">
-                        
-                    </td>
-                <tr>
-                    <td class="left">
-                        <a href="../pictures/WD008.png">&lt;meta&gt;</a>
-                    </td>
-                    <td class="right">
-                        
                     </td>
                 </tr>
                 <tr>
@@ -310,7 +299,7 @@
             </table>
         </section>
 
-        <section id="html-tags-semantic">
+        <section id="html-semantic-tags">
             <header>
                 <h2 class="title">HTML semantic tags</h2>
             </header>
@@ -374,7 +363,7 @@
 
             </table>
         </section>
-        <section id="html-tags-lists">
+        <section id="html-lists-tags">
             <header>
                 <h2 class="title">HTML lists tags</h2>
             </header>
@@ -429,7 +418,7 @@
                 </tr>
             </table>
         </section>
-        <section id="html-tags-tables">
+        <section id="html-tables-tags">
             <header>
                 <h2 class="title">HTML tables tags</h2>
             </header>
@@ -525,7 +514,7 @@
             </table>
         </section>
 
-        <section id="html-tags-picture">
+        <section id="html-picture-tags">
             <header>
                 <h2 class="title">HTML picture tags</h2>
             </header>
@@ -554,12 +543,20 @@
                         picture
                     </td>
                 </tr>
+                <tr>
+                    <td class="left">
+                        &lt;source&gt;
+                    </td>
+                    <td class="right">
+                        responsive
+                    </td>
+                </tr>
             </table>
         </section>
 
         <section id="html-golden-thoughts">
             <header>
-                <h2 class="title">Golden thoughts</h2>
+                <h2 class="title">HTML golden thoughts</h2>
             </header>
             <article>
                 <p>Wyszukiwarki indeksują strony na podstawie nagłówków.<p>
