--- a/html/page001.html
+++ b/html/page001.html
@@ -90,8 +90,8 @@
                 </tr>
             </table>
             <footer>
-                <a href="../pictures/wd008-code.png">Code</a>
-                <a href="../pictures/wd008-view.png">View</a>
+                <a href="../pictures/code/wd008-code.png">Code</a>
+                <a href="../pictures/screen/wd008-screen.png">Screen</a>
             </footer>
         </section>
 
@@ -299,9 +299,9 @@
             </table>
         </section>
 
-        <section id="html-semantic-tags">
+        <section id="html-page-structure-tags">
             <header>
-                <h2 class="title">HTML semantic tags</h2>
+                <h2 class="title">HTML page structure tags</h2>
             </header>
             <table class="zebra">
                 <tr>
@@ -360,8 +360,11 @@
                         
                     </td>
                 </tr>
-
             </table>
+            <footer>
+                <a href="../pictures/code/wd008-code.png">Code</a>
+                <a href="../pictures/screen/wd008-screen.png">Screen</a>
+            </footer>
         </section>
         <section id="html-lists-tags">
             <header>
