--- a/html/page001.html
+++ b/html/page001.html
@@ -517,9 +517,9 @@
             </table>
         </section>
 
-        <section id="html-picture-tags">
+        <section id="html-media-tags">
             <header>
-                <h2 class="title">HTML picture tags</h2>
+                <h2 class="title">HTML media tags</h2>
             </header>
             <table class="zebra">
                 <tr>
@@ -548,13 +548,33 @@
                 </tr>
                 <tr>
                     <td class="left">
-                        &lt;source&gt;
+                        &lt;picture&gt;
                     </td>
                     <td class="right">
                         responsive
                     </td>
                 </tr>
+                <tr>
+                    <td class="left">
+                        &lt;video&gt;
+                    </td>
+                    <td class="right">
+                        
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
+                        &lt;source&gt;
+                    </td>
+                    <td class="right">
+                        
+                    </td>
+                </tr>
             </table>
+            <footer>
+                <a href="../pictures/code/wd029-code.png">Code</a>
+                <a href="../../exercises/wd029/index.html">Screen</a>
+            </footer>
         </section>
 
         <section id="html-golden-thoughts">
