--- a/html/page001.html
+++ b/html/page001.html
@@ -573,7 +573,7 @@
             </table>
             <footer>
                 <a href="../pictures/code/wd029-code.png">Code</a>
-                <a href="examples/ex029/">Screen</a>
+                <a href="ex029.html">Screen</a>
             </footer>
         </section>
 
