--- a/html/page001.html
+++ b/html/page001.html
@@ -574,6 +574,7 @@
             <footer>
                 <a href="../pictures/code/wd029-code.png">Code</a>
                 <a href="ex029.html">Screen</a>
+                <a href="ex029.txt">Code</a>
             </footer>
         </section>
 
