--- a/html/page001.html
+++ b/html/page001.html
@@ -16,14 +16,9 @@
             </header>
             <article>
                 <p>button</p>
-                <p>caption</p>
                 <p>form</p>
                 <p>label</p>
-                <p>picture</p>
-                <p>source</p>
                 <p>time</p>
-                <p>title</p>
-                <p>video</p>
             </article>
         </section>
 
@@ -436,6 +431,14 @@
                 </tr>
                 <tr>
                     <td class="left">
+                        &lt;caption&gt;
+                    </td>
+                    <td class="right">
+                        table description
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
                         &lt;thead&gt;
                     </td>
                     <td class="right">
@@ -574,7 +577,6 @@
             <footer>
                 <a href="../pictures/code/wd029-code.png">Code</a>
                 <a href="ex029.html">Screen</a>
-                <a href="ex029.txt">Code</a>
             </footer>
         </section>
 
