--- a/html/page001.html
+++ b/html/page001.html
@@ -19,6 +19,7 @@
                 <p>form</p>
                 <p>label</p>
                 <p>time</p>
+                <p>input</p>
             </article>
         </section>
 
@@ -137,14 +138,6 @@
                 </tr>
                 <tr>
                     <td class="left">
-                        &lt;img&gt;
-                    </td>
-                     <td class="right">
-                        image
-                    </td>
-                </tr>
-                <tr>
-                    <td class="left">
                         &lt;a&gt;
                     </td>
                 </tr>
@@ -162,14 +155,6 @@
                     </td>
                     <td class="right">
                         new line
-                    </td>
-                </tr>
-                <tr>
-                    <td class="left">
-                        &lt;input&gt;
-                    </td>
-                    <td class="right">
-                        input of data
                     </td>
                 </tr>
                 <tr>
