--- a/html/page001.html
+++ b/html/page001.html
@@ -10,12 +10,19 @@
 </head>
 <body>
     <main>  
-        <section id="html-tags">
+        <section id="html-table-of-content">
             <header>
-                <h2 class="title">HTML tags</h2>
+                <h2 class="title">HTML table of content</h2>
             </header>
             <article>
-                
+                <p><a href="#html-boilerplate-tags">HTML boilerplate</a></p>
+                <p><a href="#html-inline-tags">HTML inline tags</a></p>
+                <p><a href="#html-block-tags">HTML block tags</a></p>
+                <p><a href="#html-lists-tags">HTML lists tags</a></p>
+                <p><a href="#html-tables-tags">HTML tables tags</a></p>
+                <p><a href="#html-media-tags">HTML media tags</a></p>
+                <p><a href="#html-form-tags">HTML form tags</a></p>
+                <p><a href="#html-golden-thoughts">HTML golden thoughts</a></p>
             </article>
         </section>
 
@@ -84,6 +91,7 @@
             <footer>
                 <a href="../pictures/code/wd008-code.png">Code</a>
                 <a href="../pictures/screen/wd008-screen.png">Screen</a>
+                <a href="#html-table-of-content">Return</a>
             </footer>
         </section>
 
