--- a/html/page001.html
+++ b/html/page001.html
@@ -310,7 +310,7 @@
                         &lt;h1&gt;
                     </td>
                     <td class="right">
-                        header (h1..h6)
+                        headings (h1..h6)
                     </td>
                 </tr>
                 <tr>
@@ -675,8 +675,8 @@
                 <h2 class="title">HTML golden thoughts</h2>
             </header>
             <article>
-                <p>Wyszukiwarki indeksują strony na podstawie nagłówków.<p>
-                <p>Nagłówki traktujmy jak tytuły książki, rozdziałów, podrozdziałów...</p>
+                <p>Search engines index pages based on headings<p>
+                <p>Think of headings as the titles of a book, chapters, subchapters</p>
             </article>
         </section>
     </main>
