--- a/html/page002.html
+++ b/html/page002.html
@@ -35,9 +35,10 @@
                 <h2 class="title">CSS</h2>
             </header>
             <article>
-                <p>Style Sheet - set of rules</p>
-                <p>Rule - selector + declaration block</p>
-                <p>Declaration block - pairs property : value</p>
+                <p>Style Sheet: set of rules</p>
+                <p>Rule: selector + declaration block</p>
+                <p>Declaration block: {declarations}</p>
+                <p>Declaration: property : value;</p>
             </article>
         </section>
 
